# massdash

./: .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  Quick Start.ipynb  README.md  TODO.md  create_requirements.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/workflows/: auto-pr-desc.yml  ci.yml  docker-publish.yml  python-publish.yml  release.yml
.streamlit/: config.toml
dist-scripts/linux/: control  create_linux_installer.sh  massdash.desktop
dist-scripts/macos/: Info.plist  create_macos_installer.sh  distribution.xml  massdash_terminal
dist-scripts/pyinstaller/: massdash.spec  run.py
dist-scripts/windows/: create_windows_installer.bat  create_windows_installer.sh  massdash_innoinstaller.iss
docs/: API.rst  GUI.rst  Getting Started.rst  Installation.rst  Plotting Gallery.rst  Python Interface.rst  README.md  Testing.rst  conf.py  index.rst  requirements.txt
docs/gui_docs/: Extracted Ion Chromatogram Workflow.rst  On-The-Fly Targeted Extraction of Raw DIA Mass Spectrometry Data Workflow.rst  Search Results Comparisons Workflow.rst
docs/installation_docs/: macos_installation.rst  ubuntu_installation.rst  windows_installation.md  windows_installation.rst
docs/nbs/: Advanced Plotting.ipynb  Loading Chromatogram Data.ipynb  Loading Data.rst  Loading Feature Information.ipynb  Loading Raw Data.rst  Loading Spectrum Data.ipynb  Peak Picking.ipynb  Plotting1D.ipynb  Quick Start.ipynb
docs/plottingGallery/: Heatmap Per Transition.ipynb  Heatmaps Merged.ipynb
docs/python_docs/: Advanced Plotting.ipynb  Loading Chromatogram Data.ipynb  Loading Data.rst  Loading Feature Information.ipynb  Loading Spectrum Data.ipynb  Peak Picking.ipynb  Plotting1D.ipynb  Quick Start.ipynb
docs/templates/: class.rst
manuscript/main_figures/: Figure-3-Features-Comparison.ipynb  Figure-4-Extraction-Optimization.ipynb  Figure-5-Peak-Picking-Demonstration.ipynb  figure3_report_diann.tsv  figure4_report_diann.tsv
manuscript/supplemental_figures/: supplemental_3d_plots_report_diann.tsv
massdash/: __init__.py  constants.py  gui.py  main.py  util.py
massdash/dataProcessing/: transformations.py
massdash/loaders/: DiaNNLoader.py  GenericChromatogramLoader.py  GenericLoader.py  GenericRawDataLoader.py  GenericSpectrumLoader.py  MzMLDataLoader.py  ResultsLoader.py  SpectralLibraryLoader.py  SqMassLoader.py  TrafoXMLLoader.py  __init__.py
massdash/peakPickers/: ConformerPeakPicker.py  GenericPeakPicker.py  MRMTransitionGroupPicker.py  __init__.py  pyMRMTransitionGroupPicker.py
massdash/plotting/: DebugPlotter.py  GenericPlotter.py  InteractivePlotter.py  InteractiveThreeDimensionPlotter.py  InteractiveTwoDimensionPlotter.py  SearchResultAnalysisPlots.py  SearchResultAnalysisPlotter.py  StaticPlotter.py  __init__.py
massdash/preprocess/: ConformerPreprocessor.py  GenericPreprocessor.py
massdash/server/: ExtractedIonChromatogramAnalysisServer.py  FeatureMapPlotterServer.py  OneDimensionPlotterServer.py  PeakPickingServer.py  RawTargetedExtractionAnalysisServer.py  SearchResultsAnalysisServer.py  ThreeDimensionPlotterServer.py  TwoDimensionPlotterServer.py  __init__.py  util.py
massdash/structs/: Chromatogram.py  Data1D.py  FeatureMap.py  FeatureMapCollection.py  GenericFeature.py  GenericStructCollection.py  Mobilogram.py  Spectrum.py  TargetedDIAConfig.py  TopTransitionGroupFeatureCollection.py  TransitionFeature.py  TransitionGroup.py  TransitionGroupCollection.py  TransitionGroupFeature.py  TransitionGroupFeatureCollection.py  __init__.py
massdash/testing/: BokehSnapshotExtension.py  NumpySnapshotExtension.py  PandasSnapshotExtension.py  PlotlySnapshotExtension.py  __init__.py
massdash/ui/: BaseUISettings.py  ChromatogramPlotUISettings.py  ConcensusChromatogramUISettings.py  ConformerPickerUISettings.py  ExtractedIonChromatogramAnalysisFormUI.py  ExtractedIonChromatogramAnalysisUI.py  FileInputRawDataUISettings.py  FileInputSearchResultsAnalysisUISettings.py  FileInputUISettings.py  FileInputXICDataUISettings.py  MRMTransitionGroupPickerUISettings.py  MassDashGUI.py  MassSeerGUI.py  PeakPickingUISettings.py  RawTargetedExtractionAnalysisFormUI.py  RawTargetedExtractionAnalysisUI.py  SearchResultsAnalysisFormUI.py  SearchResultsAnalysisUI.py  TransitionListUISettings.py  __init__.py  pyPeakPickerChromatogramUISettings.py  pyPeakPickerMRMUISettings.py  util.py
massseer/: SqlDataAccess.py  __init__.py  algo_ui.py  chromatogram_data_handling.py  data_loader.py  file_handling_ui.py  gui.py  main.py  peak_picking.py  plotter.py  plotting_ui.py  targeted_experiment_ui.py  transition_list.py  util.py  util_ui.py
massseer/loaders/: DiaNNLoader.py  GenericChromatogramLoader.py  GenericLoader.py  GenericSpectrumLoader.py  MzMLDataLoader.py  OSWDataAccess.py  OSWLoader.py  SearchResultsTSVAccess.py  SpectralLibraryLoader.py  SqMassDataAccess.py  SqMassLoader.py  SqlDataAccess.py  TargetedDIADataAccess.py  TargetedDIALoader.py  TransitionPQPLoader.py  TransitionTSVLoader.py  _GenericLoader.py  _OSWDataAccess.py  _SpectralLibraryLoader.py  _SqMassDataAccess.py  _SqMassLoader.py  _TransitionPQPLoader.py  _TransitionTSVLoader.py  __init__.py  mzMLDataLoader.py  mzMLLoader.py  reportLoader.py
massseer/peakPickers/: ConformerPeakPicker.py  GenericPeakPicker.py  MRMTransitionGroupPicker.py  _GenericPeakPicker.py  _MRMTransitionGroupPicker.py  __init__.py  _pyMRMTransitionGroupPicker.py  pyMRMTransitionGroupPicker.py
massseer/plotting/: GenericPlotter.py  InteractivePlotter.py  InteractiveTwoDimensionPlotter.py  (+7 more)
test/: README.md  __init__.py  test_gui.py
testFileGeneration/: README.md
tests/: README.md  test_SqlDataAccess.py  test_chromatogram_data_handling.py  test_data_loader.py  test_peak_picking.py
tutorials/: 01_QuickStart.ipynb  SqMass Chromatogram Fetching.ipynb
(+460 files in other folders)
