[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "massdash"
dist-name = "massdash"
author = "Justin Sing"
author-email = "justincsing@gmail.com"
home-page = "https://github.com/Roestlab/massdash"
description-file = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
requires-python = ">=3.9, <=3.12"
requires = [
    "bokeh==2.4.3",
    "Click",
    "joblib",
    "matplotlib",
    "numpy>=1.9.0",
    "pandas>=0.17",
    "plotly",
    "psutil",
    "pyopenms>=3.2.0",
    "scipy>=1.12.0",
    "tqdm",
    "upsetplot"
]

[project.optional-dependencies]
testing = ["pytest", "syrupy" ]
docs = [ 'nbsphinx', 'sphinx-copybutton', 'sphinx-rtd-theme', 'sphinx==5.3.0' ]
gui = [ 'streamlit>=1.30.0', 'streamlit-javascript', 'tk', 'pyautogui' ] 
conformer= [ 'onnxxruntime' ]


[tool.flit.scripts]
massdash = 'massdash.main:cli'

[tool.flit.sdist]
exclude = ["tests*"]
