[metadata]
name = massdash
version = attr: massdash.__version__
author = Justin Sing
author_email = justincsing@gmail.com
summary = MassDash: Streamlined DIA-MS visualization, analysis, optimization, and rapid prototyping.
description-file = README.md
home-page = https://github.com/Roestlab/massdash
requires-dist = setuptools
license = BSD
license_file = LICENSE
platform = any
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
project_urls =
    Bug Tracker = https://github.com/Roestlab/massdash/issues

[files]
packages =
    setup
    setup.cfg
    setup.cfg.extern
extra_files =
    LICENSE

[options]
zip_safe = false
python_requires = >=3.7
packages = find:
setup_requires =
    setuptools>=38.3.0
install_requires =
    bokeh==2.4.3
    Click
    joblib
    matplotlib
    matplotlib-venn
    numpy>=1.9.0
    pandas>=0.17
    plotly
    psutil
    pyopenms
    scipy
    streamlit>=1.30.0
    tqdm
    upsetplot

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar
